[package]
name = "Rust-ActiveWeb-Stock6restful-Render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.0"
sqlx = { version = "0.6", features = ["runtime-async-std-native-tls", "postgres"] }
dotenv = "0.15"
